--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -366,3 +366,255 @@
 		line-height: 15px;
 	}
 }
+// ! banner end
+
+.calculator {
+	@include adaptiv-value("margin-top", 80, 50, 1);
+	@include adaptiv-value("margin-bottom", 80, 50, 1);
+
+	&__container {
+	}
+
+	&__title {
+		@include adaptiv-value("margin-bottom", 46, 24, 1);
+	}
+
+	&__row {
+		display: flex;
+
+		@media screen and (max-width: 575px) {
+			flex-direction: column;
+		}
+	}
+
+	&__left {
+		flex: 0 0 54.5%;
+		@include adaptiv-value("padding-right", 62, -45, 1);
+		border-right: 5px solid $Red;
+
+		@media screen and (max-width: 991px) {
+			padding-right: 15px;
+			flex: 1 1 auto;
+		}
+		@media screen and (max-width: 575px) {
+			padding-right: 0;
+			border-right: 0;
+			margin-bottom: 30px;
+		}
+	}
+
+	&__num-slider {
+		background-color: $LGrey;
+		margin: 0 0 51px;
+		border-radius: 5px;
+
+		&:last-child {
+			margin-bottom: 27px;
+		}
+	}
+
+	&__right {
+		flex: 1 1 auto;
+		@include adaptiv-value("padding-left", 62, -45, 1);
+
+		@media screen and (max-width: 991px) {
+			padding-left: 15px;
+			max-width: 250px;
+		}
+		@media screen and (max-width: 575px) {
+			padding-left: 0;
+			text-align: center;
+			max-width: 100%;
+		}
+	}
+
+	&__card {
+	}
+}
+
+.num-slider {
+	position: relative;
+
+	&__heading {
+		font-size: 14px;
+		line-height: 17px;
+		color: $Grey;
+		letter-spacing: 0.2px;
+		padding: 21px 25px;
+		pointer-events: none;
+	}
+
+	&__row {
+	}
+
+	&__slider {
+		width: 100%;
+		border: none;
+		background-color: transparent;
+		height: 5px;
+		position: relative;
+		margin: 0 0 0 16px;
+
+		&::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: -15px;
+			display: block;
+			width: 16px;
+			height: 5px;
+			background-color: $Red;
+			border-radius: 5px 0 0 5px;
+		}
+
+		.noUi-base {
+		}
+
+		.noUi-connects {
+			border-radius: 0;
+		}
+
+		.noUi-connect {
+			background-color: $Red;
+			border-radius: 0 5px 5px 0;
+			pointer-events: none;
+		}
+
+		.noUi-marker.noUi-marker-horizontal.noUi-marker-large,
+		.noUi-marker.noUi-marker-horizontal.noUi-marker-normal,
+		.noUi-marker.noUi-marker-horizontal.noUi-marker-sub,
+		.noUi-value.noUi-value-horizontal.noUi-value-sub {
+			display: none;
+		}
+
+		.noUi-handle {
+			box-shadow: none;
+			background-color: $Blue;
+			border-radius: 50%;
+			border: 5px solid $Red;
+			width: 20px;
+			height: 20px;
+			right: -2px;
+			top: -7px;
+			cursor: pointer;
+
+			&::before,
+			&::after {
+				display: none;
+			}
+		}
+
+		.noUi-pips {
+			display: flex;
+			justify-content: space-between;
+			height: auto;
+			position: initial;
+			transform: translate(-16px, 0);
+			width: calc(100% + 16px);
+		}
+
+		.noUi-value-large {
+			font-size: 12px;
+			line-height: 15px;
+			letter-spacing: 0.2px;
+			color: $Grey;
+			position: initial;
+			transform: translate(0);
+		}
+	}
+
+	&__input {
+		position: absolute;
+		right: 0;
+		top: 50%;
+		transform: translate(0, -50%);
+		font-weight: 700;
+		font-size: 17px;
+		line-height: 21px;
+		color: $Black;
+		z-index: 1;
+		padding: 10px 25px;
+		background-color: transparent;
+		border: 0;
+		text-align: right;
+	}
+}
+
+.calculator-sum {
+	&__price {
+		margin-bottom: 21px;
+	}
+
+	&__text {
+		font-weight: 700;
+		font-size: 17px;
+		line-height: 21px;
+		letter-spacing: 0.3px;
+		@include adaptiv-value("margin-bottom", 12, 10, 1);
+
+		@media screen and (max-width: $layoutDesktop - 0.02 + "px") {
+			font-size: calc(15px + 2 * ((100vw - #{$layoutMobile}px) / (#{$layoutDesktop} - #{$layoutMobile})));
+			line-height: calc(21 / 17);
+		}
+	}
+
+	&__result {
+		font-weight: 700;
+		font-size: 30px;
+		line-height: 1;
+		letter-spacing: 0.5px;
+		color: $Red;
+		white-space: nowrap;
+
+		@media screen and (max-width: $layoutDesktop - 0.02 + "px") {
+			font-size: calc(25px + 5 * ((100vw - #{$layoutMobile}px) / (#{$layoutDesktop} - #{$layoutMobile})));
+		}
+	}
+
+	&__date {
+		margin-bottom: 23px;
+	}
+
+	&__actions {
+		display: flex;
+		align-items: center;
+
+		@media screen and (max-width: 991px) {
+			flex-direction: column;
+			align-items: baseline;
+		}
+		@media screen and (max-width: 575px) {
+			align-items: center;
+		}
+	}
+
+	&__btn {
+		@include adaptiv-value("margin-right", 26, -20, 1);
+		white-space: nowrap;
+
+		@media screen and (max-width: 991px) {
+			margin: 0px 0px 15px 0px;
+		}
+	}
+
+	&__btn-more {
+		border: 0;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 17px;
+		letter-spacing: 0.2px;
+		color: $Red;
+		display: inline-flex;
+		align-items: center;
+		white-space: nowrap;
+		padding: 0;
+
+		span {
+			margin-right: 7px;
+		}
+
+		i {
+			font-size: 9px;
+		}
+	}
+}
