--- a/moszaim/css/style.css
+++ b/moszaim/css/style.css
@@ -1,104 +1,398 @@
-/* Slider */
+/*! nouislider - 14.6.3 - 11/19/2020 */
 
-.slick-slider {
-  position: relative;
-  display: block;
+/* Functional styling;
+ * These styles are required for noUiSlider to function.
+ * You don't need to change these rules to apply your design.
+ */
+
+.noUi-target,
+.noUi-target * {
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-user-select: none;
+  -ms-touch-action: none;
+  touch-action: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  -ms-touch-action: pan-y;
-      touch-action: pan-y;
 }
 
-.slick-list {
+.noUi-target {
   position: relative;
-  display: block;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
 }
 
-.slick-list:focus {
-  outline: none;
-}
-
-.slick-list.dragging {
-  cursor: pointer;
-  cursor: hand;
-}
-
-.slick-slider .slick-track,
-.slick-slider .slick-list {
-  -webkit-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-.slick-track {
-  position: relative;
-  top: 0;
-  left: 0;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.slick-track:before,
-.slick-track:after {
-  content: "";
-  display: table;
-}
-
-.slick-track:after {
-  clear: both;
-}
-
-.slick-loading .slick-track {
-  visibility: hidden;
-}
-
-.slick-slide {
-  display: none;
-  float: left;
+.noUi-base,
+.noUi-connects {
+  width: 100%;
   height: 100%;
-  min-height: 1px;
+  position: relative;
+  z-index: 1;
 }
 
-[dir="rtl"] .slick-slide {
-  float: right;
+/* Wrapper for all connect elements.
+ */
+
+.noUi-connects {
+  overflow: hidden;
+  z-index: 0;
 }
 
-.slick-slide img {
+.noUi-connect,
+.noUi-origin {
+  will-change: transform;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  -ms-transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
+  -webkit-transform-style: preserve-3d;
+  transform-origin: 0 0;
+  -webkit-transform-style: flat;
+          transform-style: flat;
+}
+
+.noUi-connect {
+  height: 100%;
+  width: 100%;
+}
+
+.noUi-origin {
+  height: 10%;
+  width: 10%;
+}
+
+/* Offset direction
+ */
+
+.noUi-txt-dir-rtl.noUi-horizontal .noUi-origin {
+  left: 0;
+  right: auto;
+}
+
+/* Give origins 0 height/width so they don't interfere with clicking the
+ * connect elements.
+ */
+
+.noUi-vertical .noUi-origin {
+  width: 0;
+}
+
+.noUi-horizontal .noUi-origin {
+  height: 0;
+}
+
+.noUi-handle {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+}
+
+.noUi-touch-area {
+  height: 100%;
+  width: 100%;
+}
+
+.noUi-state-tap .noUi-connect,
+.noUi-state-tap .noUi-origin {
+  -webkit-transition: transform 0.3s;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  -o-transition: transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.noUi-state-drag * {
+  cursor: inherit !important;
+}
+
+/* Slider size and handle placement;
+ */
+
+.noUi-horizontal {
+  height: 18px;
+}
+
+.noUi-horizontal .noUi-handle {
+  width: 34px;
+  height: 28px;
+  right: -17px;
+  top: -6px;
+}
+
+.noUi-vertical {
+  width: 18px;
+}
+
+.noUi-vertical .noUi-handle {
+  width: 28px;
+  height: 34px;
+  right: -6px;
+  top: -17px;
+}
+
+.noUi-txt-dir-rtl.noUi-horizontal .noUi-handle {
+  left: -17px;
+  right: auto;
+}
+
+/* Styling;
+ * Giving the connect element a border radius causes issues with using transform: scale
+ */
+
+.noUi-target {
+  background: #FAFAFA;
+  border-radius: 4px;
+  border: 1px solid #D3D3D3;
+  -webkit-box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB;
+          box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB;
+}
+
+.noUi-connects {
+  border-radius: 3px;
+}
+
+.noUi-connect {
+  background: #3FB8AF;
+}
+
+/* Handles and cursors;
+ */
+
+.noUi-draggable {
+  cursor: ew-resize;
+}
+
+.noUi-vertical .noUi-draggable {
+  cursor: ns-resize;
+}
+
+.noUi-handle {
+  border: 1px solid #D9D9D9;
+  border-radius: 3px;
+  background: #FFF;
+  cursor: default;
+  -webkit-box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
+          box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
+}
+
+.noUi-active {
+  -webkit-box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #DDD, 0 3px 6px -3px #BBB;
+          box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #DDD, 0 3px 6px -3px #BBB;
+}
+
+/* Handle stripes;
+ */
+
+.noUi-handle:before,
+.noUi-handle:after {
+  content: "";
   display: block;
+  position: absolute;
+  height: 14px;
+  width: 1px;
+  background: #E8E7E6;
+  left: 14px;
+  top: 6px;
 }
 
-.slick-slide.slick-loading img {
-  display: none;
+.noUi-handle:after {
+  left: 17px;
 }
 
-.slick-slide.dragging img {
-  pointer-events: none;
+.noUi-vertical .noUi-handle:before,
+.noUi-vertical .noUi-handle:after {
+  width: 14px;
+  height: 1px;
+  left: 6px;
+  top: 14px;
 }
 
-.slick-initialized .slick-slide {
+.noUi-vertical .noUi-handle:after {
+  top: 17px;
+}
+
+/* Disabled state;
+ */
+
+[disabled] .noUi-connect {
+  background: #B8B8B8;
+}
+
+[disabled].noUi-target,
+[disabled].noUi-handle,
+[disabled] .noUi-handle {
+  cursor: not-allowed;
+}
+
+/* Base;
+ *
+ */
+
+.noUi-pips,
+.noUi-pips * {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.noUi-pips {
+  position: absolute;
+  color: #999;
+}
+
+/* Values;
+ *
+ */
+
+.noUi-value {
+  position: absolute;
+  white-space: nowrap;
+  text-align: center;
+}
+
+.noUi-value-sub {
+  color: #ccc;
+  font-size: 10px;
+}
+
+/* Markings;
+ *
+ */
+
+.noUi-marker {
+  position: absolute;
+  background: #CCC;
+}
+
+.noUi-marker-sub {
+  background: #AAA;
+}
+
+.noUi-marker-large {
+  background: #AAA;
+}
+
+/* Horizontal layout;
+ *
+ */
+
+.noUi-pips-horizontal {
+  padding: 10px 0;
+  height: 80px;
+  top: 100%;
+  left: 0;
+  width: 100%;
+}
+
+.noUi-value-horizontal {
+  -webkit-transform: translate(-50%, 50%);
+  -ms-transform: translate(-50%, 50%);
+      transform: translate(-50%, 50%);
+}
+
+.noUi-rtl .noUi-value-horizontal {
+  -webkit-transform: translate(50%, 50%);
+  -ms-transform: translate(50%, 50%);
+      transform: translate(50%, 50%);
+}
+
+.noUi-marker-horizontal.noUi-marker {
+  margin-left: -1px;
+  width: 2px;
+  height: 5px;
+}
+
+.noUi-marker-horizontal.noUi-marker-sub {
+  height: 10px;
+}
+
+.noUi-marker-horizontal.noUi-marker-large {
+  height: 15px;
+}
+
+/* Vertical layout;
+ *
+ */
+
+.noUi-pips-vertical {
+  padding: 0 10px;
+  height: 100%;
+  top: 0;
+  left: 100%;
+}
+
+.noUi-value-vertical {
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+      transform: translate(0, -50%);
+  padding-left: 25px;
+}
+
+.noUi-rtl .noUi-value-vertical {
+  -webkit-transform: translate(0, 50%);
+  -ms-transform: translate(0, 50%);
+      transform: translate(0, 50%);
+}
+
+.noUi-marker-vertical.noUi-marker {
+  width: 5px;
+  height: 2px;
+  margin-top: -1px;
+}
+
+.noUi-marker-vertical.noUi-marker-sub {
+  width: 10px;
+}
+
+.noUi-marker-vertical.noUi-marker-large {
+  width: 15px;
+}
+
+.noUi-tooltip {
   display: block;
+  position: absolute;
+  border: 1px solid #D9D9D9;
+  border-radius: 3px;
+  background: #fff;
+  color: #000;
+  padding: 5px;
+  text-align: center;
+  white-space: nowrap;
 }
 
-.slick-loading .slick-slide {
-  visibility: hidden;
+.noUi-horizontal .noUi-tooltip {
+  -webkit-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+      transform: translate(-50%, 0);
+  left: 50%;
+  bottom: 120%;
 }
 
-.slick-vertical .slick-slide {
-  display: block;
-  height: auto;
-  border: 1px solid transparent;
+.noUi-vertical .noUi-tooltip {
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+      transform: translate(0, -50%);
+  top: 50%;
+  right: 120%;
 }
 
-.slick-arrow.slick-hidden {
-  display: none;
+.noUi-horizontal .noUi-origin > .noUi-tooltip {
+  -webkit-transform: translate(50%, 0);
+  -ms-transform: translate(50%, 0);
+      transform: translate(50%, 0);
+  left: auto;
+  bottom: 10px;
+}
+
+.noUi-vertical .noUi-origin > .noUi-tooltip {
+  -webkit-transform: translate(0, -18px);
+  -ms-transform: translate(0, -18px);
+      transform: translate(0, -18px);
+  top: auto;
+  right: 28px;
 }
 
 @font-face {
@@ -1083,6 +1377,223 @@ textarea.form__input {
   line-height: 15px;
 }
 
+.calculator {
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.calculator__title {
+  margin-bottom: 46px;
+}
+
+.calculator__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.calculator__left {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 54.5%;
+          flex: 0 0 54.5%;
+  padding-right: 62px;
+  border-right: 5px solid #a80011;
+}
+
+.calculator__num-slider {
+  background-color: #f3f3f3;
+  margin: 0 0 51px;
+  border-radius: 5px;
+}
+
+.calculator__num-slider:last-child {
+  margin-bottom: 27px;
+}
+
+.calculator__right {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding-left: 62px;
+}
+
+.num-slider {
+  position: relative;
+}
+
+.num-slider__heading {
+  font-size: 14px;
+  line-height: 17px;
+  color: #8e8e8e;
+  letter-spacing: 0.2px;
+  padding: 21px 25px;
+  pointer-events: none;
+}
+
+.num-slider__slider {
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  height: 5px;
+  position: relative;
+  margin: 0 0 0 16px;
+}
+
+.num-slider__slider::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -15px;
+  display: block;
+  width: 16px;
+  height: 5px;
+  background-color: #a80011;
+  border-radius: 5px 0 0 5px;
+}
+
+.num-slider__slider .noUi-connects {
+  border-radius: 0;
+}
+
+.num-slider__slider .noUi-connect {
+  background-color: #a80011;
+  border-radius: 0 5px 5px 0;
+  pointer-events: none;
+}
+
+.num-slider__slider .noUi-marker.noUi-marker-horizontal.noUi-marker-large,
+.num-slider__slider .noUi-marker.noUi-marker-horizontal.noUi-marker-normal,
+.num-slider__slider .noUi-marker.noUi-marker-horizontal.noUi-marker-sub,
+.num-slider__slider .noUi-value.noUi-value-horizontal.noUi-value-sub {
+  display: none;
+}
+
+.num-slider__slider .noUi-handle {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: #f4faff;
+  border-radius: 50%;
+  border: 5px solid #a80011;
+  width: 20px;
+  height: 20px;
+  right: -2px;
+  top: -7px;
+  cursor: pointer;
+}
+
+.num-slider__slider .noUi-handle::before,
+.num-slider__slider .noUi-handle::after {
+  display: none;
+}
+
+.num-slider__slider .noUi-pips {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: auto;
+  position: initial;
+  -webkit-transform: translate(-16px, 0);
+      -ms-transform: translate(-16px, 0);
+          transform: translate(-16px, 0);
+  width: calc(100% + 16px);
+}
+
+.num-slider__slider .noUi-value-large {
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.2px;
+  color: #8e8e8e;
+  position: initial;
+  -webkit-transform: translate(0);
+      -ms-transform: translate(0);
+          transform: translate(0);
+}
+
+.num-slider__input {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 21px;
+  color: #1d1d1d;
+  z-index: 1;
+  padding: 10px 25px;
+  background-color: transparent;
+  border: 0;
+  text-align: right;
+}
+
+.calculator-sum__price {
+  margin-bottom: 21px;
+}
+
+.calculator-sum__text {
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 21px;
+  letter-spacing: 0.3px;
+  margin-bottom: 12px;
+}
+
+.calculator-sum__result {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 1;
+  letter-spacing: 0.5px;
+  color: #a80011;
+  white-space: nowrap;
+}
+
+.calculator-sum__date {
+  margin-bottom: 23px;
+}
+
+.calculator-sum__actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.calculator-sum__btn {
+  margin-right: 26px;
+  white-space: nowrap;
+}
+
+.calculator-sum__btn-more {
+  border: 0;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.2px;
+  color: #a80011;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  white-space: nowrap;
+  padding: 0;
+}
+
+.calculator-sum__btn-more span {
+  margin-right: 7px;
+}
+
+.calculator-sum__btn-more i {
+  font-size: 9px;
+}
+
 @media screen and (min-width: 992px) {
   .container {
     padding: 0 30px;
@@ -1159,6 +1670,15 @@ textarea.form__input {
   .attention__third {
     font-size: calc(30px + 25 * ((100vw - 320px) / (1480 - 320)));
     line-height: calc(56 / 55);
+  }
+
+  .calculator-sum__text {
+    font-size: calc(15px + 2 * ((100vw - 320px) / (1480 - 320)));
+    line-height: calc(21 / 17);
+  }
+
+  .calculator-sum__result {
+    font-size: calc(25px + 5 * ((100vw - 320px) / (1480 - 320)));
   }
 }
 
@@ -1248,6 +1768,34 @@ textarea.form__input {
   .attention__second {
     padding-left: calc(10px + 40 * ((100vw - 320px) / (1160)));
   }
+
+  .calculator {
+    margin-top: calc(50px + 30 * ((100vw - 320px) / (1160)));
+  }
+
+  .calculator {
+    margin-bottom: calc(50px + 30 * ((100vw - 320px) / (1160)));
+  }
+
+  .calculator__title {
+    margin-bottom: calc(24px + 22 * ((100vw - 320px) / (1160)));
+  }
+
+  .calculator__left {
+    padding-right: calc(-45px + 107 * ((100vw - 320px) / (1160)));
+  }
+
+  .calculator__right {
+    padding-left: calc(-45px + 107 * ((100vw - 320px) / (1160)));
+  }
+
+  .calculator-sum__text {
+    margin-bottom: calc(10px + 2 * ((100vw - 320px) / (1160)));
+  }
+
+  .calculator-sum__btn {
+    margin-right: calc(-20px + 46 * ((100vw - 320px) / (1160)));
+  }
 }
 
 @media screen and (max-width: 991px) {
@@ -1263,6 +1811,32 @@ textarea.form__input {
 
   .main__form {
     max-width: 300px;
+  }
+
+  .calculator__left {
+    padding-right: 15px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+  }
+
+  .calculator__right {
+    padding-left: 15px;
+    max-width: 250px;
+  }
+
+  .calculator-sum__actions {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+
+  .calculator-sum__btn {
+    margin: 0px 0px 15px 0px;
   }
 }
 
@@ -1575,6 +2149,31 @@ textarea.form__input {
     -webkit-transform: translate(-50%, 0);
         -ms-transform: translate(-50%, 0);
             transform: translate(-50%, 0);
+  }
+
+  .calculator__row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .calculator__left {
+    padding-right: 0;
+    border-right: 0;
+    margin-bottom: 30px;
+  }
+
+  .calculator__right {
+    padding-left: 0;
+    text-align: center;
+    max-width: 100%;
+  }
+
+  .calculator-sum__actions {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
