--- a/moszaim/css/style.css
+++ b/moszaim/css/style.css
@@ -681,6 +681,31 @@ img {
   color: #a80011;
 }
 
+.btn-more {
+  border: 0;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.2px;
+  color: #a80011;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  white-space: nowrap;
+  padding: 0;
+}
+
+.btn-more span {
+  margin-right: 7px;
+}
+
+.btn-more i {
+  font-size: 9px;
+}
+
 .form__body {
   position: relative;
 }
@@ -1171,6 +1196,15 @@ textarea.form__input {
   text-transform: uppercase;
 }
 
+.menu__list--row {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 .menu__link {
   font-size: 12px;
   line-height: 15px;
@@ -1569,29 +1603,122 @@ textarea.form__input {
   white-space: nowrap;
 }
 
-.calculator-sum__btn-more {
-  border: 0;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  letter-spacing: 0.2px;
-  color: #a80011;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+.footer {
+  padding: 26px 0;
+  background-color: #f3f3f3;
+}
+
+.footer__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.footer__logo {
+  margin-bottom: 17px;
+}
+
+.footer__copyright {
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.2px;
+  color: #8e8e8e;
+  margin-bottom: 15px;
+}
+
+.footer__btn {
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0px;
+}
+
+.footer__center {
+  padding-left: 66px;
+  padding-right: 66px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 58.5%;
+          flex: 0 0 58.5%;
+}
+
+.footer__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__menu .menu__item {
+  margin: 2.5px 0;
+}
+
+.footer__menu .menu__link {
   white-space: nowrap;
+  display: block;
+}
+
+.footer__list {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.footer .menu__list--row {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   padding: 0;
 }
 
-.calculator-sum__btn-more span {
-  margin-right: 7px;
+.footer .menu__list--row .menu__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+  margin: 5px 0;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
-.calculator-sum__btn-more i {
-  font-size: 9px;
+.footer .menu__list--row .menu__link {
+  letter-spacing: 0.6px;
+}
+
+.footer__right {
+  text-align: right;
+}
+
+.footer__contact {
+  margin-bottom: 15px;
+}
+
+.footer__contact:last-child {
+  margin-bottom: 0;
+}
+
+.footer__link {
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 16px;
+  color: #1d1d1d;
+}
+
+.footer__contact-label {
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.1px;
+  color: #8e8e8e;
+  margin-top: 4px;
+}
+
+.footer__address {
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.1px;
 }
 
 @media screen and (min-width: 992px) {
@@ -1679,6 +1806,11 @@ textarea.form__input {
 
   .calculator-sum__result {
     font-size: calc(25px + 5 * ((100vw - 320px) / (1480 - 320)));
+  }
+
+  .footer .menu__list--row .menu__link {
+    font-size: calc(8px + 4 * ((100vw - 320px) / (1480 - 320)));
+    line-height: calc(15 / 12);
   }
 }
 
@@ -1795,6 +1927,45 @@ textarea.form__input {
 
   .calculator-sum__btn {
     margin-right: calc(-20px + 46 * ((100vw - 320px) / (1160)));
+  }
+
+  .footer__center {
+    padding-left: calc(-40px + 106 * ((100vw - 320px) / (1160)));
+  }
+
+  .footer__center {
+    padding-right: calc(-40px + 106 * ((100vw - 320px) / (1160)));
+  }
+
+  .footer__list {
+    padding-left: calc(0px + 25 * ((100vw - 320px) / (1160)));
+  }
+
+  .footer__list {
+    padding-right: calc(0px + 25 * ((100vw - 320px) / (1160)));
+  }
+
+  .footer .menu__list--row .menu__item {
+    padding-left: calc(0px + 25 * ((100vw - 320px) / (1160)));
+  }
+
+  .footer .menu__list--row .menu__item {
+    padding-right: calc(0px + 25 * ((100vw - 320px) / (1160)));
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .footer__btn {
+    white-space: normal;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .footer__center {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 57%;
+            flex: 0 0 57%;
   }
 }
 
@@ -2036,6 +2207,24 @@ textarea.form__input {
   .attention {
     max-width: 250px;
   }
+
+  .footer__left {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    padding-right: 15px;
+  }
+
+  .footer__center {
+    display: none;
+  }
+
+  .footer__right {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    padding-left: 15px;
+  }
 }
 
 @media screen and (max-width: 575px) {
@@ -2174,6 +2363,40 @@ textarea.form__input {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .footer__row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .footer__left {
+    text-align: center;
+    margin-bottom: 22px;
+    padding: 0;
+  }
+
+  .footer__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 10px;
+  }
+
+  .footer__copyright {
+    display: none;
+  }
+
+  .footer__right {
+    text-align: center;
+    padding: 0;
   }
 }
 
