--- a/#src/scss/base/base.scss
+++ b/#src/scss/base/base.scss
@@ -53,3 +53,18 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+.quote-title {
+    position: relative;
+    padding-left: 20px;
+    
+    &::before {
+        content: "";
+        display: block;
+        height: 100%;
+        width: 5px;
+        background: $Red;
+        position: absolute;
+        left: 0;
+    }
+}
