--- a/#src/scss/components/titles.scss
+++ b/#src/scss/components/titles.scss
@@ -3,6 +3,7 @@
         font-weight: 700;
         font-size: 30px;
         line-height: 1;
+        letter-spacing: 0.3px;
 
         @media screen and (max-width: $layoutDesktop - 0.02 + 'px') {
             font-size: calc(20px + 10 * ((100vw - #{$layoutMobile}px) / (#{$layoutDesktop} - #{$layoutMobile})));
