--- a/#src/scss/components/_index.scss
+++ b/#src/scss/components/_index.scss
@@ -1,7 +1,7 @@
 @import "titles";
 @import "buttons";
 @import "input";
-// @import "accordion";
+@import "accordion";
 // @import "tabs";
 // @import "modals";
 @import "header";
